# nomadays-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
alembic/: env.py
alembic/versions/: 001_add_quotation_tables.py  003_trip_enhancements.py  004_trip_presentation.py  005_trip_locations.py  006_partner_agencies.py  007_trip_categories.py  008_distribution_fields.py  009_trip_language_translation.py  010_translation_cache.py  011_accommodations.py  012_location_and_priority.py  013_internal_notes.py  014_early_bird_discounts.py  015_excluded_seasons.py  016_locations.py  017_supplier_types_array.py  018_supplier_website.py  019_supplier_vat_registered.py  020_supplier_workflow.py  021_contract_ai_fields.py  022_accommodation_billing.py  023_supplier_billing_entity.py  024_season_year_string.py  025_accommodation_extras.py  026_season_level.py  027_contract_status_enum.py  028_contract_rates_table.py  029_season_original_name.py  030_contract_notes.py  031_accommodation_photos.py  034_trip_photos.py  (+45 more)
app/: __init__.py  config.py  database.py  main.py
scripts/: create_test_user.py  seed_demo.py
test_images/: beautiful-scenic-travel-landscape-ayutthaya-thailand-hero.avif  beautiful-scenic-travel-landscape-ayutthaya-thailand-large.avif  beautiful-scenic-travel-landscape-ayutthaya-thailand-medium.avif  beautiful-scenic-travel-landscape-ayutthaya-thailand-small.avif  beautiful-scenic-travel-landscape-ayutthaya-thailand-thumbnail.avif
(+106 files in other folders)
